# devcontainer

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
image/devtools/: BUILD.bazel  devtools_image_test.yml
